aws-submariner/prometheus/operator/thanos-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: thanos-sidecar-svc
  namespace: monitoring
spec:
  ports:
    - port: 10901
      protocol: TCP
      targetPort: grpc
      name: grpc
  selector:
    app: prometheus
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thanos-sidecar-ing
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens "off";
spec:
  tls:
    - hosts:
        - sidecar-us-west-2.devshell.sh
      secretName: sidecar-tls
  rules:
    - host: sidecar-us-west-2.devshell.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: thanos-sidecar-svc
              servicePort: grpc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ing
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens "off";
spec:
  tls:
    - hosts:
        - prom-us-west-2.devshell.sh
      secretName: prom-tls
  rules:
    - host: prom-us-west-2.devshell.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-operator-prometheus
              servicePort: 9090
